# rocketfetch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  cliff.toml  config.toml  windows_default.toml  workflow_config.toml
.github/workflows/: publish.yml  rust.yml  upload_binaries.yaml
src/: cli.rs  config.rs  main.rs  modules.rs  toml.pest  utils.rs
src/logos/: arch_linux  debian  debian_linux  macos  ubuntu_linux  windows
