[package]
name = "rocketfetch"
version = "0.7.3"
authors = ["Devan Looches <devan.looches@gmail.com>"]
edition = "2021"
include = ["src/**/*"]
license = "MIT"
description = "A WIP command line system information tool written asynchronously in rust for performance with toml file configuration."
repository = "https://github.com/devanlooches/rustfetch"
readme = "README.md"
keywords = ["system", "cli", "fetch", "multithreaded", "multithreading"]
categories = ["command-line-utilities"]

[dependencies]
any_terminal_size = { version = "0.1.21" }
console = "0.15.7"
dirs = "5.0.1"
libmacchina = "7.1.0"
regex = "1.9.4"
secfmt = "0.1.1"
serde = "1.0.188"
serde_derive = "1.0.188"
structopt = "0.3.26"
textwrap = "0.16.0"
toml = "0.7.6"
user-error = "1.2.8"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
lto = "fat"
