[package]
name = "rocketfetch"
version = "0.7.4"
authors = ["Devan Looches <devan.looches@gmail.com>"]
edition = "2021"
include = ["src/**/*"]
license = "MIT"
description = "A WIP command line system information tool written asynchronously in rust for performance with toml file configuration."
repository = "https://github.com/devanlooches/rustfetch"
readme = "README.md"
keywords = ["system", "cli", "fetch", "multithreaded", "multithreading"]
categories = ["command-line-utilities"]

[dependencies]
any_terminal_size = { version = "0.1.21" }
console = "0.15.8"
dirs = "5.0.1"
libmacchina = "7.2.2"
regex = "1.10.4"
secfmt = "0.1.1"
serde = "1.0.197"
serde_derive = "1.0.197"
structopt = "0.3.26"
textwrap = "0.16.1"
toml = "0.8.12"
user-error = "1.2.8"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
lto = "fat"
