[package]
name = "rocketfetch"
version = "0.7.4"
authors = ["Devan Looches <devan.looches@gmail.com>"]
edition = "2021"
include = ["src/**/*"]
license = "MIT"
description = "A WIP command line system information tool written asynchronously in rust for performance with toml file configuration."
repository = "https://github.com/devanlooches/rustfetch"
readme = "README.md"
keywords = ["system", "cli", "fetch", "multithreaded", "multithreading"]
categories = ["command-line-utilities"]

[dependencies]
any_terminal_size = "0.1.21"
clap = { version = "4.5.10", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
libmacchina = "7.3.0"
regex = "1.10.5"
secfmt = "0.1.1"
serde = "1.0.204"
serde_derive = "1.0.204"
textwrap = "0.16.1"
toml = "0.8.15"
user-error = "1.2.8"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
lto = "fat"
